test/compile-fail/fuzz_line_error_missing_filename.c
//
int 0()0 __LINE__""
